...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="There are currently no scheduled events"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="bottom|end"
        android:backgroundTint="#637BC4"
        android:clickable="true"
...
