<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Name"/>

        <EditText
            android:id="@+id/event_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"/>

        <EditText
            android:id="@+id/date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Select Date"
            android:inputType="time"
            android:clickable="true"
            android:focusable="false"/>

        <EditText
            android:id="@+id/event_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Start Time: Format (23:59)"
            android:inputType="time"
            android:clickable="true"
            android:focusable="false"/>

        <EditText
            android:id="@+id/event_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event End Time: Format (23:59)"
            android:inputType="time"
            android:clickable="true"
            android:focusable="false"/>


    </LinearLayout>

</RelativeLayout>