...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="#E9EBF0">

            <Button
                android:id="@+id/previous_day_route"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Back"
                android:backgroundTint="#637BC4"
                />
...
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center"
                android:layout_weight="2.5" />

            <Button
                android:id="@+id/next_day_route"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Next"
                android:backgroundTint="#637BC4"
                />
...
